tests/expectations/parser/finalize/decrement_fail.out
namespace = "ParseStatement"
expectation = "Fail"
outputs = [
    """
Error [EPAR0370005]: expected ] -- found ','
    --> test:1:14
     |
   1 | decrement[foo, bar, baz];
     |              ^""",
    """
Error [EPAR0370005]: expected ; -- found '<eof>'
    --> test:1:15
     |
   1 | decrement(floo)
     |               ^Warning [WPAR0370001]: The keyword `decrement` is deprecated.
    --> test:1:1
     |
   1 | decrement(floo)
     | ^^^^^^^^^^^^^^^
     |
     = Use `Mapping::{get, get_or_use, set, remove, contains}` for manipulating on-chain mappings.""",
    """
Error [EPAR0370005]: expected ; -- found 'foo'
    --> test:1:11
     |
   1 | decrement foo[bar] by baz;
     |           ^^^""",
]
